# agentfarm

./: .env.save  .gitignore  CLAUDE.md  INFRASTRUCTURE_PLAN.md  README.md  Untitled Document 1  change_log.json  files_changed.json  frog_character.py  game.py  game_design.json  game_development_environment_setup.json  game_development_environment_setup.txt  game_result.json  obstacle.py  output.json  pyproject.toml  status.sh
deploy/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml
deploy/nginx/: nginx.conf
docker/: Dockerfile.sandbox
docs/: AGENTS.md  ARCHITECTURE.md  CURRENT_STATE.md  EVAL_FIXES.md  GPU_PASSTHROUGH.md  INDEX.md  MCP_TESTING.md  MONETIZATION.md  NETWORK_ISOLATION.md  PROVIDERS.md  ROCM_SETUP.md  SECURITY.md  SSL_SETUP.md  WEB.md  WIREGUARD_SETUP.md
evals/: __init__.py  agent_chain_tests.py  dashboard.html  quick_test.py  suite.py
evals/results/: eval_20260113_213624.json  (+4 more)
game_files/: files_changed.json
policies/: AGENTS.md
scripts/: README.md  ollama_setup.sh  set_admin.py  setup_stripe.md  stripe_webhook_proxy.php  wireguard-setup.sh
systemprompter/: designer.md  executor.md  orchestrator.md  planner.md  reviewer.md  verifier.md
tests/: __init__.py  test_agent_chain.py  test_agents.py  test_collaboration.py  test_mcp_server.py  test_mcp_tools.py  test_memory.py  test_parallel_execution.py  test_providers.py  test_recursion_guard.py  test_sandbox_integration.py  test_schemas.py  test_task_classifier.py  test_team_collaboration.py  test_tools.py  test_web_download.py
vscode-extension/: README.md  package.json
(+88 files in other folders)
