[project]
name = "agentfarm"
version = "0.1.0"
description = "Token-efficient multi-agent orchestration system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Albin" }]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
docker = ["docker>=7.0.0"]
git = ["gitpython>=3.1.0"]
claude = ["anthropic>=0.40.0"]
ollama = ["ollama>=0.4.0"]
groq = ["groq>=0.13.0"]
azure = [
    "azure-ai-inference>=1.0.0",
    "azure-identity>=1.19.0",
]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
full = [
    "mcp>=1.0.0",
    "docker>=7.0.0",
    "gitpython>=3.1.0",
]
all = [
    "agentfarm[full,claude,ollama,groq,azure]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]

[project.scripts]
agentfarm = "agentfarm.cli:main"
agentfarm-mcp = "agentfarm.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentfarm"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/agentfarm"]
